@@ -35,6 +35,7 @@ Ver.15 (in Development)
   field is edited.
 - If the property INTERMediatorOnPage.justMoveToDetail set to true, in case of Master/Detail navigating page, just a
   detail area is going to update after a field is edited.
+- The property 'no-default-values-on-copy' can suppress default values on copying records.
 - [Bug Fix]On version 12, INTERMediator.clearCondition method clears page number of pagination in any case.
   INTERMediator.clearCondition should be cleared any parameter, just clears all conditions.
 - [SECURITY ISSUES] The account manager of sample code can be accessed on same case. So the samples are moved to
